--- a/index.html
+++ b/index.html
@@ -13,5 +13,5 @@
 
   <body>
     <script src="sketch.js"></script>
-  </body>
+    <h1>solihatul lailiyah-S1TIS210397-UAS-komputer grafik</body>
 </html>
